@@ -1,4 +1,3 @@
-"FB-Nr.",1,6,"8.1","8.2","11","12","13.1","16.1","16.3","19","23","Sonstiges"
 1,,,"Außendienst",,,"Rechnungsprüfung, Änderung","Bonität",,,,,"x Seite 8"
 2,,"Postwurf, Inserate",,"Infos für Angebotsentwicklung","bei jedem Folgekauf, nach jedem dir. Mailing","falsche werden korrigiert",,,,,,
 3,,,,,,,,,,,,
